# local-pdf-rag

./: README.md  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
